--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -332,7 +332,50 @@ d & = 2r \arcsin\left( \sqrt{\text{haversin} \left( \phi_{2} - \phi_{1} \right) 
 
 The prerequisites for this approach are that the Second Life model is aligned correctly to the Second Life compass as the real location is aligned to real bearings (also required for orientation control from the previous section), a single anchor point for which both the real world latitude \& longitude \& the corresponding virtual world X \& Y coordinates are known \& that the reconstruction adheres to a known, consistent scale.
 
-\textbf{***worked haversine example, with diagram}
+\subsection{Haversine Example}
+
+\begin{figure}[h]
+\centering
+  \includegraphics[width=\linewidth]{haversine_example.png}
+  \caption{Using haversine to mimic real world movement in a virtual world.}
+  \label{haversine_example.png}
+\end{figure}
+
+Figure \ref{haversine_example.png} illustrates an example of using haversine to calculate the user's position within the virtual environment that is equivalent to their current position in the real world. For the real world, we know the latitude ($\psi$) \& longitude ($\phi$) of the anchor point \& we are told the latitude \& longitude of the user from GPS. For the virtual world, we know the X,Y coordinates of the anchor point \& we need to calculate the X,Y coordinates of the user.
+
+To obtain the user's Y coordinate, $\upsilon_{2}(y)$, we calculate the difference between the latitude of the anchor point \& the latitude of the user's position reported by GPS, converting to radians where necessary, then add/subtract this value from the anchor point's Y coordinate;
+
+\begin{equation}
+d = \Delta{\phi} = 3.5779250e^{-06}
+
+a = \sin^{2}(d/2) =  3.200387e^{-12}
+
+\end{equation}
+
+
+
+
+
+%c = \text{atan2} \left( \sqrt[]{a}, \sqrt[]{1-a} \right) \times 6371km = 22.794960m
+%\phi_{2} < \phi_{1} \therefore \upsilon_{2}(y) = 88.862 - 22.794960 = 66.06704
+
+
+
+
+%\begin{center}
+%$d = \Delta{\phi} = 3.5779250e^{-06}$
+
+%$a = sin^{2}(d/2) = 3.200387e^{-12}$
+
+%$c = atan2(\sqrt[]{a}, \sqrt[]{1-a}) \times 6371km = 22.794960m$
+					
+%$\phi_{2} < \phi_{1} \therefore \upsilon_{2}(y) = 88.862 - 22.794960 = 66.06704$
+%\end{center}
+					
+					We repeat the calculation using $\Delta{\psi}$ to obtain $\upsilon_{2}(x)$ \& issue a move command to the avatar for this newly calculated vector.
+					
+					
+
 
 %Using the haversine formula the great-circle (or orthodromic) distance between the latitude of the anchor point and the latitude of the new GPS reading is calculated, then applying the scale of the model results in the equivalent distance in OpenSim metrics between the Y coordinate of the anchor point and the Y coordinate of the position corresponding to the new GPS reading. Repeating the same calculations with the longitude of the new GPS reading provides the distance between the X coordinate of the anchor point and the X coordinate of the position corresponding to the new GPS reading. Adding or subtracting these distances as appropriate to the OpenSim coordinates of the anchor point provides the OpenSim coordinates that correspond to the new GPS reading, to which the avatar is then instructed to move.
 
