--- a/thesis.tex
+++ b/thesis.tex
@@ -39,6 +39,9 @@
 
 \usepackage{caption}
 
+%'therefore' symbol
+\usepackage{amssymb}
+
 \renewcommand{\chaptername}{}
 
 % Renders two images side-by-side & scales them so height is identical
