--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -327,12 +327,12 @@ where $h$ is $\text{haversin}\left( \frac{d}{r} \right)$;
 
 \begin{align}
 d & = 2r \arcsin\left( \sqrt{\text{haversin} \left( \phi_{2} - \phi_{1} \right) + \cos \left( \phi_{1} \right) \cos  \left( \phi_{2} \right) \text{haversin} \left( \lambda_{2} - \lambda_{1} \right) } \right) \nonumber \\ 
-& = 2r \arcsin\left( \sqrt{\sin^{2} \left( \frac{\phi_{2} - \phi_{1}}{2}\right) + \cos\left( \phi_{2} \right) \cos\left( \phi_{2} \right) \sin^{2} \left( \frac{\lambda_{2} - \lambda_{1}}{2} \right) } \right)
+& = 2r \arcsin\left( \sqrt{\sin^{2} \left( \frac{\phi_{2} - \phi_{1}}{2}\right) + \cos\left( \phi_{1} \right) \cos\left( \phi_{2} \right) \sin^{2} \left( \frac{\lambda_{2} - \lambda_{1}}{2} \right) } \right)
 \end{align}
 
 The prerequisites for this approach are that the Second Life model is aligned correctly to the Second Life compass as the real location is aligned to real bearings (also required for orientation control from the previous section), a single anchor point for which both the real world latitude \& longitude \& the corresponding virtual world X \& Y coordinates are known \& that the reconstruction adheres to a known, consistent scale.
 
-\subsection{Haversine Example}
+Figure \ref{haversine_example.png} illustrates this arrangement. In the real world, on the left, we know the latitude \& longitude of the anchor point, as well as the latitude \& longitude of the user's current position as reported by the GPS receiver. In the virtual world, on the right, we know the X,Y coordinates that are equivalent to the latitude \& longitude of the anchor point \& we must calculate the X,Y coordinates that are equivalent to the user's current position as reported by the GPS receiver.
 
 \begin{figure}[h]
 \centering
@@ -341,30 +341,19 @@ The prerequisites for this approach are that the Second Life model is aligned co
   \label{haversine_example.png}
 \end{figure}
 
-%Figure \ref{haversine_example.png} illustrates an example of using haversine to calculate the user's position within the virtual environment that is equivalent to their current position in the real world. For the real world, we know the latitude ($\psi$) \& longitude ($\phi$) of the anchor point \& we are told the latitude \& longitude of the user from GPS. For the virtual world, we know the X,Y coordinates of the anchor point \& we need to calculate the X,Y coordinates of the user.
+The difference in longitude between the anchor point \& the user's position, $\Delta\lambda$, is given by;
 
-%To obtain the user's Y coordinate, $\upsilon_{2}(y)$, we calculate the difference between the latitude of the anchor point \& the latitude of the user's position reported by GPS, converting to radians where necessary, then add/subtract this value from the anchor point's Y coordinate;
+\begin{equation}
+2r \arcsin\left( \sqrt{\sin^{2} \left( \frac{\lambda_{2} - \lambda_{1}}{2} \right) } \right)
+\end{equation}
 
-\begin{align}
-& d = \Delta{\phi} = 3.5779250e^{-06} \\ & a = \sin^{2}\left( d / 2 \right) = 3.200387e^{-12} \\ & c = \text{atan2} \left( \sqrt[]{a}, \sqrt[]{1-a} \right) \times 6371km = 22.794960m \\ & \phi_{2} < \phi_{1} \therefore \upsilon_{2}(y) = 88.862 - 22.794960 = 66.06704
-\end{align}
+While the difference in latitude between the anchor point \& the user's position, $\Delta\phi$, is given by;
 
+\begin{equation}
+2r \arcsin\left( \sqrt{\sin^{2} \left( \frac{\phi_{2} - \phi_{1}}{2}\right)} \right)
+\end{equation}
 
-
-%\begin{center}
-%$d = \Delta{\phi} = 3.5779250e^{-06}$
-
-%$a = sin^{2}(d/2) = 3.200387e^{-12}$
-
-%$c = atan2(\sqrt[]{a}, \sqrt[]{1-a}) \times 6371km = 22.794960m$
-					
-%$\phi_{2} < \phi_{1} \therefore \upsilon_{2}(y) = 88.862 - 22.794960 = 66.06704$
-%\end{center}
-					
-					We repeat the calculation using $\Delta{\psi}$ to obtain $\upsilon_{2}(x)$ \& issue a move command to the avatar for this newly calculated vector.
-					
-					
-
+Applying the scale of the reconstruction to these values gives $\Delta$x \& $\Delta$y, which can then be added or subtracted from the X,Y coordinates of the anchor point to give the coordinates of the user's position, $\upsilon_{2}(x),\upsilon_{2}(y)$.
 
 %Using the haversine formula the great-circle (or orthodromic) distance between the latitude of the anchor point and the latitude of the new GPS reading is calculated, then applying the scale of the model results in the equivalent distance in OpenSim metrics between the Y coordinate of the anchor point and the Y coordinate of the position corresponding to the new GPS reading. Repeating the same calculations with the longitude of the new GPS reading provides the distance between the X coordinate of the anchor point and the X coordinate of the position corresponding to the new GPS reading. Adding or subtracting these distances as appropriate to the OpenSim coordinates of the anchor point provides the OpenSim coordinates that correspond to the new GPS reading, to which the avatar is then instructed to move.
 
@@ -516,7 +505,7 @@ One of the extensions that the OpenSim server provides over the Second Life serv
 
 Region modules allow for more complex \& powerful extensions, written in C\#, to be developed external to the OpenSim platform than would otherwise be possible via Second Life's internal Linden Scripting Language (LSL). Similar to how the Second Life client's joystick interface represented an opportunity to implement the orientation control of VTW without relying upon a bespoke, modified client, an OpenSim Region Module represents the possibility to implement the position control required by VTW without relying upon a similarly bespoke client.
 
-An excerpt from the implementation of the position control required by VTW is included as \ref{RegionModuleCode1} (full Region Module code available online\RegionModuleCodeFootnote{}). This shows the use of haversine, calculating the displacement in real world latitude between the anchor point \& the new GPS reading (lines 5-8), applying the scale of the reconstruction to this displacement (lines 10-14) \& then applying this scaled displacement to the virtual world Y coordinate of the anchor (lines 16-24). This process is then repeated for the longitude/X coordinate \& the avatar can then be moved to the position within the OpenSim reconstruction that is equivalent to the user's new real world position.
+An excerpt from the implementation of the position control required by VTW is included as \ref{RegionModuleCode1} (full Region Module code available online\RegionModuleCodeFootnote{}). This shows the use of haversine, implemented using the \texttt{atan2()} function, calculating the displacement in real world latitude between the anchor point \& the new GPS reading (lines 5-8), applying the scale of the reconstruction to this displacement (lines 10-14) \& then applying this scaled displacement to the virtual world Y coordinate of the anchor (lines 16-24). This process is then repeated for the longitude/X coordinate \& the avatar can then be moved to the position within the OpenSim reconstruction that is equivalent to the user's new real world position.
 
 \begin{figure}[h]
 \begin{lstlisting}[language=Java, numbers=left, numberstyle=\small, stepnumber=1, frame=single, breaklines=true, backgroundcolor=\color{codebackground}, showstringspaces=false]
